--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - POSTGRES_DB=markets
     ports:
       - "5432:5432"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data  
 
   pgadmin-compose:
     image: dpage/pgadmin4
